<resources>
    <string name="app_name">Nike</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Total">Total</string>
    <string name="Men">Men</string>
    <string name="Women">Women</string>
    <string name="Kid">Kid</string>

    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
</resources>