<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:textColor="@color/black"
            android:fontFamily="@font/varela_round_regular"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sort By"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round_regular"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rgp_sort_SP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Featured"
                    android:textColor="@color/black"
                    android:fontFamily="@font/varela_round_regular"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Price: Low-High"
                    android:textColor="@color/black"
                    android:fontFamily="@font/varela_round_regular"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Price: High-Low"
                    android:textColor="@color/black"
                    android:fontFamily="@font/varela_round_regular"/>

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round_regular"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cbx_men_SP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Men"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round_regular"/>

            <CheckBox
                android:id="@+id/cbx_women_SP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Women"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round_regular"/>

            <CheckBox
                android:id="@+id/cbx_kid_SP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kid"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_reset_Filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pill_button_background"
                android:backgroundTint="@color/pale_gray"
                android:textAllCaps="false"
                android:textSize="15dp"
                android:fontFamily="@font/varela_round_regular"
                android:text="Reset"
                android:textColor="@color/black"/>

            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_apply_Filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pill_button_background"
                android:backgroundTint="@color/black"
                android:textSize="15dp"
                android:fontFamily="@font/varela_round_regular"
                android:text="Apply"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>